--- a/index.html
+++ b/index.html
@@ -63,17 +63,29 @@
       <!-- Works section -->
       <section>
         <h2>What are we doing</h2>
-        <img
-          src="./images/img-01.jpeg"
-          alt="Monitor with picture on the screen"
-          width="360"
-        />
-        <img
-          src="./images/img-02.jpeg"
-          alt="Phone with different app designs"
-          width="360"
-        />
-        <img src="./images/img-03.jpeg" alt="Phone with some app in hand" width="360"/>
+        <ul>
+          <li>
+            <img
+              src="./images/img-01.jpeg"
+              alt="Monitor with picture on the screen"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img-02.jpeg"
+              alt="Phone with different app designs"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img-03.jpeg"
+              alt="Phone with some app in hand"
+              width="360"
+            />
+          </li>
+        </ul>
       </section>
 
       <!-- Our teem section -->
