--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <body>
     <header>
       <!-- Logo -->
-      <a href="">WEBSTUDIO</a>
+      
 
       <!-- Navigation -->
       <nav>
+        <a href="./index.html">WebStudio</a>
+
         <ul>
           <li><a href="/studio">Studio</a></li>
           <li><a href="/portfolio">Portfolio</a></li>
@@ -22,8 +24,10 @@
 
       <!-- Contacts -->
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
 
@@ -38,24 +42,24 @@
       <section>
         <ul>
           <li>
-            Strategy<br />
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the
+                perfect and creative solution.</p>
           </li>
           <li>
-            Punctuality<br />
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
+            <h3>Punctuality</h3>
+            <p>Bring the key message to the brand's audience for the best price
+                within the shortest possible time.</p>
           </li>
           <li>
-            Diligence<br />
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
+            <h3>Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.</p>
           </li>
           <li>
-            Technologies<br />
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
+            <h3>Technologies</h3>
+            <p>Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.</p>
           </li>
         </ul>
       </section>
@@ -100,7 +104,8 @@
               alt="Mark Guerrero - Product Designer"
               width="264"
             />
-            <p><b>Mark Guerrero</b><br />Product Designer</p>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <!-- Team Card 02 -->
@@ -109,7 +114,8 @@
               alt="Tom Ford - Frontend Developer"
               width="264"
             />
-            <p><b>Tom Ford</b><br />Frontend Developer</p>
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <!-- Team Card 03 -->
@@ -118,7 +124,8 @@
               alt="Camila Garcia - Marketing"
               width="264"
             />
-            <p><b>Camila Garcia</b><br />Marketing</p>
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <!-- Team Card 04 -->
@@ -127,7 +134,8 @@
               alt="Daniel Wilson - UI Designer"
               width="264"
             />
-            <p><b>Daniel Wilson</b><br />UI Designer</p>
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -135,11 +143,11 @@
 
     <footer>
       <!-- Logo -->
-      <a href="">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
 
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and 
+        sales for your business with digital 
         marketing & growth solutions.
       </p>
     </footer>
